# job-platform

./: .gitignore  README.md  TODO.md  task.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: Employer.py
backend/app/api/v1/: Employer.py  Vacancy.py  auth.py  hello_world.py
backend/app/api/v1/User/: user.py
backend/app/core/: db.py  security.py  security_jwt.py  settings.py
backend/app/dependencies/: db.py  dependencies.py  employer.py  security.py  vacancy.py
backend/app/dto/: Auth.py  Employer.py  User.py  Vacancy.py
backend/app/models/: Application.py  Base.py  Company.py  Employer.py  Resume.py  Student.py  User.py  Vacancy.py  __init__.py
backend/app/repositories/: Employer.py  Exceptions.py  Resume.py  Vacancy.py  user.py
backend/app/services/: Employer.py  Vacancy.py  auth.py  user.py
backend/keys/: jwtRS256.key  jwtRS256.key.pub
backend/migrations/: env.py
backend/migrations/versions/: 2ed073be4f93_enable_citext_extension.py  504b2c62d627_user_firstname_and_lastname_nullable.py  56c98796109d_init_tables_again.py  cf08d5f06f58_student_table.py  e05d786c8a71_init_tables.py  f49459358af0_user_firstname_and_lastname_nullable.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  RegisterForm.css  api.js  index.css
frontend/src/auth/: AuthContext.jsx  Protected.jsx
frontend/src/components/: CreateVacancy.css  CreateVacancy.jsx  CreateVacancyForm.jsx  EmployerProfile.css  EmployerProfile.jsx  Header.jsx  Home.jsx  (+8 more)
(+4 files in other folders)
